src/components/Header.css
header {
  padding: 16px;
  display: flex;
  justify-content: flex-end;
}

nav ul {
  list-style-type: none;
  padding: 0;
}

nav ul li {
  display: inline;
  margin-right: 1rem;
}

.user {
  display: inline-flex;
  align-items: center;
  gap: 4px;
  color: #00ff00;
}

